# codineer

./: .gitignore  CODINEER.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  clippy.toml  index.html  package.json  rustfmt.toml  settings.example.json
.aineer/specs/: aineer-product-tech-design.md
.cargo/: config.toml
.codineer/: .gitignore  CODINEER.md
.github/workflows/: release.yml  release_nightly.yml
Formula/: aineer.rb  codineer.rb
app/: Cargo.toml  tauri.conf.json
app/capabilities/: default.json  webai-remote.json  webauth-local.json
app/icons/: icon.icns
app/src/: error.rs  lib.rs  system_tray.rs  version.rs
app/src/blocks/: mod.rs
app/src/commands/: agent.rs  ai.rs  auto_update.rs  cache.rs  channels.rs  files.rs  gateway.rs  git.rs  lsp.rs  mcp.rs  memory.rs  mod.rs  plugins.rs  session.rs  settings.rs  shell.rs  slash_commands.rs  webai.rs
crates/api/: Cargo.toml  README.md  README_CN.md
crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
crates/api/src/providers/: codineer_provider.rs  codineer_provider_tests.rs  mod.rs  openai_compat.rs  openai_compat_sse.rs  openai_compat_tests.rs
crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  bridge.rs  session.rs  theme.rs  workspace.rs
crates/auto_update/: Cargo.toml
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs
crates/cli/src/: auth.rs  bootstrap.rs  cli.rs  desktop.rs  lib.rs  live_cli.rs  main_tests.rs  models_cmd.rs  resume.rs
crates/codineer-cli/: Cargo.toml
crates/codineer-cli/src/: auth.rs  auto_update.rs  banner.rs  bootstrap.rs  cli.rs  config_cmd.rs  error.rs  help.rs  image_util.rs  init.rs  input.rs  live_cli.rs  main.rs  main_tests.rs  models_cmd.rs  platform.rs  progress.rs  render.rs  reports.rs  resume.rs  runtime_client.rs  session_store.rs  style.rs  tool_display.rs  tracing_observer.rs  turn_helpers.rs  workspace.rs
crates/codineer-cli/src/input/: clipboard.rs  editor.rs  mod.rs  session.rs  text.rs
crates/codineer-cli/src/input/editor/: tests.rs
crates/codineer-cli/src/runtime_client/: messages.rs  mod.rs  model.rs  stream.rs  tests.rs
crates/codineer-core/: Cargo.toml  README.md  README_CN.md
crates/codineer-core/src/: cancel.rs  config.rs  elicitation.rs  error.rs  events.rs  lib.rs  loop_state.rs  observer.rs  prompt_types.rs  telemetry.rs
crates/commands/: Cargo.toml  README.md  README_CN.md
crates/commands/src/: discovery.rs  git.rs  lib.rs  plugins_cmd.rs  slash_help.rs  slash_spec.rs  tests.rs
crates/engine/: Cargo.toml  README.md  README_CN.md
crates/engine/src/: bash.rs  conversation.rs  file_ops.rs  hooks.rs  json.rs  lib.rs  model_context.rs  oauth.rs  permissions.rs  prompt.rs  recovery.rs  remote.rs  sandbox.rs  session.rs  streaming_tool_executor.rs  swarm.rs  token_budget.rs  tool_orchestration.rs  tool_result.rs  usage.rs
crates/engine/src/commands/: discovery.rs  git.rs  mod.rs  plugins_cmd.rs  registry.rs  slash_help.rs  slash_spec.rs  tests.rs
crates/engine/src/compact/: microcompact.rs  mod.rs  reactive.rs
crates/engine/src/config/: loader.rs  mod.rs  tests.rs  types.rs
crates/engine/src/credentials/: claude_code.rs  env_resolver.rs  mod.rs  oauth_resolver.rs
crates/gateway/src/: server.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: client.rs  error.rs  lib.rs  manager.rs  types.rs
crates/mcp/src/: remote.rs
crates/memory/: Cargo.toml
crates/plugins/: Cargo.toml  README.md  README_CN.md
crates/plugins/bundled/sample-hooks/.codineer-plugin/: plugin.json
crates/plugins/src/: bundled.rs  constants.rs  definition.rs  error.rs  hooks.rs  install.rs  lib.rs  lifecycle.rs  manager.rs  manifest.rs  resolve.rs  tests.rs  types.rs
crates/provider/: Cargo.toml
crates/provider/src/: credentials.rs  lib.rs
crates/release_channel/: Cargo.toml
crates/runtime/: Cargo.toml  README.md  README_CN.md
crates/runtime/src/: bash.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  json.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_remote.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  recovery.rs  remote.rs  sandbox.rs  session.rs  streaming_tool_executor.rs  token_budget.rs  tool.rs  tool_orchestration.rs  tool_result.rs  usage.rs
crates/runtime/src/compact/: microcompact.rs  reactive.rs
crates/runtime/src/config/: loader.rs  mod.rs  tests.rs  types.rs
crates/runtime/src/mcp_stdio/: manager.rs  mod.rs  process.rs  tests.rs  types.rs
crates/settings/: Cargo.toml
crates/settings/src/: schema.rs
crates/terminal/src/: lib.rs
crates/tools/: .gitignore  Cargo.toml  README.md  README_CN.md
crates/tools/src/: agent.rs  config_tool.rs  lib.rs  notebook.rs  powershell.rs  registry.rs  specs.rs  tool_output.rs  types.rs  web.rs
crates/tools/src/tests/: mod.rs  suite1.rs  suite2.rs
crates/ui/src/: diff_panel.rs  input_bar.rs  timeline.rs
crates/webai/: Cargo.toml
crates/webai/src/: auth_store.rs  engine.rs  error.rs  lib.rs  page.rs  page_manager.rs  provider.rs  sse_parser.rs  webauth.rs
crates/webai/src/providers/: chatgpt.rs  claude.rs  deepseek.rs  dom_helpers.rs  doubao.rs  gemini.rs  glm.rs  glm_intl.rs  grok.rs  kimi.rs  mod.rs  perplexity.rs  qwen.rs  qwen_cn.rs  xiaomimo.rs
crates/webai/src/tool_calling/: converter.rs  mod.rs  parser.rs  prompt.rs
docs/design/: aineer-product-tech-design.md
patches/wry/: Cargo.toml
scripts/: version-bump.ts
ui/: App.tsx
ui/components/: ActivityBar.tsx  ChatView.tsx  FileTree.tsx  GitPanel.tsx  InputBar.tsx  Logo.tsx  PreviewPanel.tsx  SearchPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TaskQueueBar.tsx  TerminalPanel.tsx  ThemeSettings.tsx
ui/components/input/: AttachmentStrip.tsx  FilePicker.tsx  InputBar.tsx
ui/components/settings/: AboutPage.tsx  (+12 more)
ui/hooks/: useChatExecution.ts  useClickOutside.ts  useCopyAction.ts  useGlobalShortcuts.ts  useIsDark.ts  useTabs.ts  useTaskQueue.ts  useWorkspace.ts
ui/lib/: model-options.ts  theme.ts
ui/styles/: globals.css
(+37 files in other folders)
