[workspace]
members = ["crates/*"]
default-members = ["crates/codineer-cli"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["andeya <andeyalee@outlook.com>"]
repository = "https://github.com/andeya/codineer"
homepage = "https://github.com/andeya/codineer"
documentation = "https://github.com/andeya/codineer"
keywords = ["ai", "coding-agent", "cli", "llm", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
lsp-types = "0.97"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
