[workspace]
members = ["crates/*", "app"]
default-members = ["app"]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
authors = ["andeya <andeyalee@outlook.com>"]
repository = "https://github.com/andeya/aineer"
homepage = "https://github.com/andeya/aineer"
keywords = [
    "ai",
    "ade",
    "agentic-development-environment",
    "llm",
    "developer-tools",
]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-core = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal
portable-pty = "0.9"

# Git
git2 = { version = "0.19", default-features = false }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["ws"] }

# Syntax
syntect = "5"

# Credentials
keyring = "3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.27", features = ["derive"] }
base64 = "0.22"
notify = "7"

# Internal crates
aineer-protocol = { version = "*", path = "crates/protocol" }
aineer-api = { version = "*", path = "crates/api" }
aineer-provider = { version = "*", path = "crates/provider" }
aineer-settings = { version = "*", path = "crates/settings" }
aineer-engine = { version = "*", path = "crates/engine" }
aineer-tools = { version = "*", path = "crates/tools" }
aineer-gateway = { version = "*", path = "crates/gateway" }
aineer-mcp = { version = "*", path = "crates/mcp" }
aineer-lsp = { version = "*", path = "crates/lsp" }
aineer-plugins = { version = "*", path = "crates/plugins" }
aineer-cli = { version = "*", path = "crates/cli" }
aineer-memory = { version = "*", path = "crates/memory" }
aineer-channels = { version = "*", path = "crates/channels" }
aineer-auto-update = { version = "*", path = "crates/auto_update" }
aineer-release-channel = { version = "*", path = "crates/release_channel" }
aineer-webai = { version = "*", path = "crates/webai" }

# Inherited by crates with `[lints] workspace = true`. CI: `cargo clippy --workspace --all-targets -- -D warnings`
[workspace.lints.rust]
unsafe_code = "forbid"
# Allow redundant `{}` around expressions (e.g. closure args after rustfmt wraps long calls).
# With `-D warnings`, rustc would otherwise error and fight `cargo fmt` output.
unused_braces = "allow"

[workspace.lints.clippy]
# Baseline: enable all Clippy lints at `warn`; CI promotes warnings to errors with `-D warnings`.
# Pedantic / nursery are opt-in per crate or module to keep noise low.
all = { level = "warn", priority = -1 }

# Patched wry: avoid panicking on nil WKWebView.URL / navigation request.URL (macOS WebKit).
[patch.crates-io]
wry = { path = "patches/wry" }
