[package]
name = "codineer-api"
description = "AI provider API clients and streaming for Codineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }

[lints]
workspace = true
