[package]
name = "aineer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aineer"
path = "src/main.rs"

[dependencies]
aineer-ui = { workspace = true }
aineer-terminal = { workspace = true }
aineer-provider = { workspace = true }
aineer-settings = { workspace = true }
aineer-theme = { workspace = true }
aineer-engine = { workspace = true }
aineer-api = { workspace = true }
aineer-tools = { workspace = true }
aineer-gateway = { workspace = true }
aineer-protocol = { workspace = true }
aineer-memory = { workspace = true }
aineer-release-channel = { workspace = true }
aineer-cli = { workspace = true }
gpui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }
objc = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "allow"
