[package]
name = "aineer-channels"
version.workspace = true
edition.workspace = true

[dependencies]
aineer-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
