[package]
name = "codineer-cli"
description = "Codineer - a local AI coding-agent CLI powered by Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "codineer"
path = "src/main.rs"

[dependencies]
api.workspace = true
commands.workspace = true
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime.workspace = true
plugins.workspace = true
serde_json.workspace = true
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools.workspace = true

[lints]
workspace = true
