[package]
name = "codineer-core"
description = "Core types and abstractions for Codineer: events, observer, cancellation, errors, IDs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
strum.workspace = true
thiserror.workspace = true

[lints]
workspace = true
