[package]
name = "codineer-core"
description = "Core types and abstractions for Codineer: events, observer, cancellation, errors, IDs"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[lints]
workspace = true
