[package]
name = "aineer-engine"
description = "Agent engine for Aineer: session, config, prompt, sandbox, commands"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protocol.workspace = true
api.workspace = true
mcp.workspace = true
lsp.workspace = true
plugins.workspace = true
async-trait = "0.1"
dunce = "1"
glob = "0.3"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "time",
] }
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
lopdf = "0.36.0"
base64.workspace = true
similar = "2.7.0"
thiserror.workspace = true

[lints]
workspace = true
