[package]
name = "lsp"
description = "Language Server Protocol client integration for Codineer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
url = "2"

[lints]
workspace = true
