[package]
name = "aineer-memory"
version.workspace = true
edition.workspace = true

[dependencies]
aineer-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
