[package]
name = "plugins"
description = "Plugin system and hooks for Codineer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
runtime = { path = "../runtime" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
