[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
glob = "0.3"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
lsp = { path = "../lsp" }
plugins = { path = "../plugins" }
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
