[package]
name = "codineer-runtime"
description = "Core runtime engine for Codineer: session, config, MCP, prompt, sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
dunce = "1"
getrandom = "0.2"
glob = "0.3"
keyring = { version = "3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
lsp.workspace = true
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
walkdir = "2"

[lints]
workspace = true
