[package]
name = "codineer-runtime"
description = "Core runtime engine for Codineer: session, config, MCP, prompt, sandbox"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
dunce = "1"
getrandom = "0.2"
glob = "0.3"
keyring = { version = "3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
lsp.workspace = true
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "time",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
walkdir = "2"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
lopdf = "0.36.0"
base64.workspace = true
similar = "2.7.0"

[lints]
workspace = true
