[package]
name = "codineer-tools"
description = "AI-callable tool definitions and execution for Codineer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
api.workspace = true
plugins.workspace = true
runtime.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
