[package]
name = "codineer-tools"
description = "AI-callable tool definitions and execution for Codineer"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
api.workspace = true
git2.workspace = true
lsp.workspace = true
lsp-types.workspace = true
plugins.workspace = true
runtime.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
