[package]
name = "aineer-webai"
description = "WebAI — browser-based AI provider layer using Tauri WebView"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = "6"
regex = "1"
url = "2"

[lints]
workspace = true
